--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,13 @@
     <script src="script.js"> </script>
 </head>
 <body>
-<p>my paragraph</p>
-<p>making a change to test a second commit</p>
+
+<div class="firstFlex">
+  <p id="firstP">my paragraph</p>
+  <p id="secondP">making a change to test a second commit</p>
+  <p id="thirdP">third paragraph</p>
+
+</div>
+
 </body>
 </html>
